prevent wrapping on streak author

--- a/static/scss/main/view_streak.scss
+++ b/static/scss/main/view_streak.scss
@@ -93,6 +93,13 @@
             display: block;
             width: 100%;
         }
+
+        .user_list {
+            .user_data {
+                margin-left: 20px;
+                width: 140px;
+            }
+        }
     }
 
     .submit_sub {
